tests/NormalTests/paczka1/small_fuzzy/78414765.err
Error in line 4: jBynJQXn A889 61,7
Error in line 9: aJNShegk S971 67,6
